...

    var id: String { rawValue }

    var displayName: String {
        switch self {
        case .movies:
            return "Movies"
        case .tvShows:
            return "TV Shows"
        case .books:
            return "Books"
        case .albums:
            return "Albums"
...
